@@ -1,3 +1,9 @@
+Fri Feb  1 23:54:00 2002  Owen Taylor  <otaylor@redhat.com>
+
+	* gtk/gtkrc.[ch] (gtk_rc_parse_engine):	Support 
+	engine "" {} to mean override to the default 
+	engine. (#70205)
+
 Fri Feb  1 23:25:33 2002  Owen Taylor  <otaylor@redhat.com>
 
 	* gtk/gtktooltips.c (gtk_tooltips_init): Parse the
